--- a/src/index.html
+++ b/src/index.html
@@ -16,5 +16,6 @@
   <body>
     <include src="./partials/header.html"></include>
     <include src="./partials/hero.html"></include>
+    <include src="./partials/about.html"></include>
   </body>
 </html>
