--- a/src/index.html
+++ b/src/index.html
@@ -17,5 +17,6 @@
     <include src="./partials/header.html"></include>
     <include src="./partials/hero.html"></include>
     <include src="./partials/about.html"></include>
+    <include src='./partials/cases.html'></include>
   </body>
 </html>
