add blog markup

--- a/src/index.html
+++ b/src/index.html
@@ -18,5 +18,6 @@
     <include src="./partials/hero.html"></include>
     <include src="./partials/about.html"></include>
     <include src='./partials/cases.html'></include>
+    <include src='./partials/blog.html'></include>
   </body>
 </html>
