add team markup

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,8 @@
     <include src="./partials/header.html"></include>
     <include src="./partials/hero.html"></include>
     <include src="./partials/about.html"></include>
-    <include src='./partials/cases.html'></include>
-    <include src='./partials/blog.html'></include>
+    <include src="./partials/cases.html"></include>
+    <include src="./partials/blog.html"></include>
+    <include src="./partials/team.html"></include>
   </body>
 </html>
