add contact section

--- a/src/index.html
+++ b/src/index.html
@@ -20,5 +20,6 @@
     <include src="./partials/cases.html"></include>
     <include src="./partials/blog.html"></include>
     <include src="./partials/team.html"></include>
+    <include src="./partials/contact.html"></include>
   </body>
 </html>
