--- a/src/index.html
+++ b/src/index.html
@@ -21,5 +21,6 @@
     <include src="./partials/blog.html"></include>
     <include src="./partials/team.html"></include>
     <include src="./partials/contact.html"></include>
+    <include src="./partials/footer.html"></include>
   </body>
 </html>
