--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,16 @@
   </head>
   <body>
     <include src="./partials/header.html"></include>
+    <main>
     <include src="./partials/hero.html"></include>
     <include src="./partials/about.html"></include>
     <include src="./partials/cases.html"></include>
     <include src="./partials/blog.html"></include>
     <include src="./partials/team.html"></include>
     <include src="./partials/contact.html"></include>
+  </main>
     <include src="./partials/footer.html"></include>
+    <script src="./index.js" type="module"></script>
+    <script scr="./js/modernizr-custom.js"></script>
   </body>
 </html>
