--- a/src/index.html
+++ b/src/index.html
@@ -11,18 +11,20 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./sass/index.scss" />
+    <link type="image/x-icon" href="./images/favicon.png" rel="shortcut icon" />
+    <link type="Image/x-icon" href="./images/favicon.png" rel="icon" />
     <script type="module" src="./index.js"></script>
   </head>
   <body>
     <include src="./partials/header.html"></include>
     <main>
-    <include src="./partials/hero.html"></include>
-    <include src="./partials/about.html"></include>
-    <include src="./partials/cases.html"></include>
-    <include src="./partials/blog.html"></include>
-    <include src="./partials/team.html"></include>
-    <include src="./partials/contact.html"></include>
-  </main>
+      <include src="./partials/hero.html"></include>
+      <include src="./partials/about.html"></include>
+      <include src="./partials/cases.html"></include>
+      <include src="./partials/blog.html"></include>
+      <include src="./partials/team.html"></include>
+      <include src="./partials/contact.html"></include>
+    </main>
     <include src="./partials/footer.html"></include>
     <script src="./index.js" type="module"></script>
     <script scr="./js/modernizr-custom.js"></script>
