--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,9 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./sass/index.scss" />
+    <link rel="stylesheet" href="./lightbox.min.css">
     <link type="image/x-icon" href="./images/favicon.png" rel="shortcut icon" />
     <link type="Image/x-icon" href="./images/favicon.png" rel="icon" />
-    <script type="module" src="./index.js"></script>
   </head>
   <body>
     <include src="./partials/header.html"></include>
@@ -27,6 +27,7 @@
     </main>
     <include src="./partials/footer.html"></include>
     <script src="./index.js" type="module"></script>
-    <script scr="./js/modernizr-custom.js"></script>
+    <script src="./js/modernizr-custom.js" type="module"></script>
+    <script src="./js/lightbox-plus-jquery.min.js" type="module"></script>
   </body>
 </html>
