--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
       <include src="./partials/blog.html"></include>
       <include src="./partials/team.html"></include>
       <include src="./partials/contact.html"></include>
+      <include src="./partials/modal.html"></include>
     </main>
     <include src="./partials/footer.html"></include>
     <script src="./index.js" type="module"></script>
